# Ninjapie

./: .gitignore  README.md  dist.sh  env.py  generator.py  ninjapie  ninjapie.py  path.py  pyproject.toml
.github/workflows/: pylint.yml  tests.yml
ninjapie/: __init__.py  __main__.py  env.py  generator.py  path.py
tests/: helper.sh  run.sh  runcov.sh
tests/asm/: build.py  hello.S
tests/c/: build.py
tests/c-shared-lib/foo/: build.py  foo.c
tests/c-static-lib/: build.py  hello.c
tests/c-static-lib/foo/: build.py
tests/cxx/: build.py  check.sh
tests/env-clone/: build.py  foo.c  hello.c
tests/error-multi-rules/: build.py  check.sh  foo.c  hello.c
tests/latex/: build.py  check.sh  hello.tex
tests/rust/: Cargo.toml  build.py  check.sh
tests/rust-c/: Cargo.toml  build.py  hello.cpp  lib.rs
tests/shared-lib/: build.py
